# ft_webserv

./: CMakeLists.txt  Makefile
cgi-bin/: doesntwork2.py  doesntworkeither.py  hello_world.py  sleep.py
conf/: default.conf  multiple_servers.conf
conf/error_pages/: 400.html  401.html  402.html  403.html  404.html  405.html  406.html  407.html  408.html  409.html  410.html  411.html  412.html  413.html  414.html  415.html  416.html  417.html  418.html  421.html  422.html  423.html  424.html  425.html  426.html  428.html  429.html  431.html  451.html  500.html  501.html  502.html  503.html  504.html  505.html  506.html  507.html  508.html  510.html  511.html
docs/: webserv.drawio
html/: 404.html  delete.html  index.html  post.html
html/layerOne/: index.html
includes/: CGI.hpp  ClientSocket.hpp  Config.hpp  ConfigUtil.hpp  Connection.hpp  FileParser.hpp  Handler.hpp  Poller.hpp  Request.hpp  Response.hpp  Route.hpp  ServerSocket.hpp  Signals.hpp  Socket.hpp  StatusCodes.hpp  Utils.hpp  Webserv.hpp
srcs/: CGI.cpp  ClientSocket.cpp  ConfigUtil.cpp  Connection.cpp  FileParser.cpp  Option.cpp  Poller.cpp  PortConfig.cpp  Route.cpp  ServerConfig.cpp  ServerSocket.cpp  Signals.cpp  Socket.cpp  Utils.cpp  main.cpp
srcs/handler/: DeleteHandler.cpp  Handler.cpp  PostHandler.cpp
srcs/request/: Decoder.cpp  ErrorHandling.cpp  HandleRequest.cpp  Request.cpp
srcs/response/: AutoIndex.cpp  Response.cpp  ResponseBody.cpp  (+2 more)
testmap/: testHome.html  tooLargeFile.txt
tests/: CMakeLists.txt
tests/regressiontests/: pytest_dev.py  test_configurations.py  test_files.py  test_statuscodes.py
tests/unittests/: test_cgi.cpp  test_connection.cpp  test_parser.cpp  test_request.cpp  test_response.cpp  test_socket.cpp  unittests.hpp  utils.cpp
(+8 files in other folders)
